first and last commit

--- a/templates/accounts/password_change_done.html
+++ b/templates/accounts/password_change_done.html
@@ -9,7 +9,7 @@
                 <p>Your password has been Changed and you have been logged out from other devices</p>
             <div class="d-flex justify-content-center align-items-center mt-4">
                 <span class="fw-normal">
-                    <a href="settings.html" class="fw-bold">Go back</a>
+                    <a href="profile.html" class="fw-bold">Go back</a>
                 </span>
             </div>
         </div>
