--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -5,9 +5,9 @@
 <br><br><br><br>
 <h1 class="h1">Your e-mail is on its way!!</h1>
 <br><br>
-<p class="text">An e-mail has been sent and will arrive shortly. If you don't get an email in 10 minutes, you can contact our support team and we'll help you out with it</p>
+<p class="text">A password-reset e-mail has been sent and will arrive shortly.</p>
 <br><br><br>
-<a href="{% url 'login' %}"><button class="btn btn-gray-800 border-success" type="button">Go back</button></a>
+<a href="profile.html"><button class="btn btn-gray-800 border-success" type="button">Go back</button></a>
 <br><br>
 </center>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
