--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -10,7 +10,7 @@
     
 </style>
     <main>
-        <section class="justify-content-center form-bg-image mt-5 mt-lg-0 bg-soft d-flex align-items-center" data-background-lg="/static/assets/img/illustrations/signin.svg">
+        <section class="justify-content-center form-bg-image mt-5 mt-lg-0 bg-soft d-flex align-items-center">
             <div class="container justify-content-center overflow-auto">
                 <a>
                     <img src="/static/assets/img/django-logo.svg" class="rounded mx-auto d-block small" width="40px", height="40px" alt="Clarion">
