--- a/templates/accounts/password_reset_confirm.html
+++ b/templates/accounts/password_reset_confirm.html
@@ -1,7 +1,6 @@
 {% extends "layouts/base-fullscreen.html" %}
 {% block title %}Reset your password{% endblock %}
 {% block content %}
-<h1 class="my-5" >Reset your password</h1>
 {% if validlink %}
 <main>
     <section class="vh-lg-100 mt-5 mt-lg-0 bg-soft d-flex align-items-center">
@@ -15,29 +14,24 @@
                             </h1>
                             <br>
                         </div>
-                        <form method="post" action="" class="mt-4">
-                            
+                        <form method="post"  class="mt-4">
+                
                             {% csrf_token %}
-
-                            <!-- Form -->
-                            <div class="form-group align-items-center mb-4">
-                                <label for="new_password1">Your Password</label>
-                                <div class="input-group">
-                                    {{ form.new_password1 }}
-                                </div>  
-                            </div>
-                            <!-- End of Form -->
-                            <div class="form-group align-items-center">
-                                <!-- Form -->
+            
+                            <div class="form-group">
                                 <div class="form-group mb-4">
-                                    <label for="new_password2">Your Password Again</label>
-                                    <div class="input-group">
-                                        {{ form.new_password2 }}
-                                    </div>  
+                                    <label for="new_password1">New Password</label>
+                                    <input class="form-control" {{ form.new_password1 }}
+
+                                </div>
+                                <div class="form-group mb-4">
+                                    <label for="new_password2">New Password again</label>
+                                    <input class="form-control" {{ form.new_password2 }}
+                                </input>  
                                 </div>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" name="password_change" class="btn btn-gray-800 animate-up-4">Change Password</button>
+                                <button type="submit" name="Change password" class="btn btn-gray-800 animate-hover">Submit</button>
                             </div>
                         </form>
                         <br />
