--- a/templates/layouts/base-fullscreen.html
+++ b/templates/layouts/base-fullscreen.html
@@ -39,6 +39,13 @@
     App - {% block title %}{% endblock title %}
 </title>
 
+<!-- Favicon -->
+<link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/django-logo.svg">
+<link rel="icon" type="image/png" sizes="32x32" href="/static/assets/img/django-logo.svg">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/assets/img/django-logo.svg">
+<link rel="mask-icon" href="django-logo.svg" color="#ffffff">
+<meta name="msapplication-TileColor" content="#212121">
+<meta name="theme-color" content="#212121">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="title" content="App">
