--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base-fullscreen.html" %}
 
-{% block title %} Settings {% endblock %} 
+{% block title %} Profile {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
@@ -57,6 +57,18 @@
                                 <input class="form-control" id="referral_code" type="text" placeholder="{{ request.user.referral_code }}" readonly>
                             </div>
                         </div>
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label for="main_balance">Main Balance</label>
+                                <input class="form-control" id="main_balance" type="text" placeholder="{{ request.user.main_balance }}" readonly>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label for="referral_balance">Referral Balance</label>
+                                <input class="form-control" id="referral_balance" type="text" placeholder="{{ request.user.referral_balance }}" readonly>
+                            </div>
+                        </div>
                     </div>
                     <div class="mt-3">
                         <a  href="{% url 'password_change' %}" class="btn btn-gray-800 mt-2 animate-up-2" type="submit">Change Password</a>
@@ -64,7 +76,49 @@
                 </form>
             </div>
         </div>
+        <br><br><br>
+    <div class="h2 text-center">Referrals</div>
+    <br>
+
+    <div class="container card card-body border-0 shadow table-wrapper table-responsive">
+    
+    {% if referrals %}
+    <table>
+        <thead>
+            <tr>
+                <th>user</th>
+                <th>date</th>
+                <th>status</th>
+                <th>bonus</th>
+                
+            </tr>
+        </thead>
+        <tbody>
+            {% for referral in referrals %}
+            <tr>
+                <td>{{ referral.referrals }}</td>
+                <td>{{ referral.date }}</td>
+                <td>{{ referral.status }}</td>
+                <td class="text-success">+{{ referral.award_bonus }}</td>
+
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% else %}
+    <div class="card-footer px-3 border-0 d-flex flex-column flex-lg-row align-items-center justify-content-between">
+        <nav aria-label="referrals">
+            <ul class="pagination mb-0">
+                <li>
+                You have no Referrals yet
+                </li>
+            </ul>
+        </nav>
     </div>
+    {% endif %}
+    </div>
+</div>
+</div>
 
 {% endblock content %}
 
